# sentinel-agent-runtime

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_guardrails.py  benchmark_repair.py
benchmarks/repair_cases/bounded_stack_capacity_bug/: expected_behavior.md  metadata.json  solution.py  test_solution.py
benchmarks/repair_cases/incorrect_aggregation_logic/: expected_behavior.md  metadata.json  solution.py  test_solution.py
benchmarks/repair_cases/missing_input_validation/: expected_behavior.md  metadata.json  solution.py  test_solution.py
benchmarks/repair_cases/missing_none_check/: expected_behavior.md  metadata.json  solution.py  test_solution.py
benchmarks/repair_cases/mutation_while_iterating/: expected_behavior.md  metadata.json  solution.py  test_solution.py
benchmarks/repair_cases/off_by_one_bug/: expected_behavior.md  (+3 more)
dashboard/: app.py
examples/medical_policy_guardrail/: run.py
examples/software_repair/: run.py
policies/: medical_safety.yaml
scripts/: smoke_gemini_patch.py  smoke_openai_patch.py  test.ps1
src/brahman_os/: __init__.py  schemas.py
tests/: test_akasha_store.py  test_benchmarks.py  test_dashboard.py  test_imports.py  test_karma_ledger.py  test_llm_patch_generator.py  test_orchestrator.py  test_peg.py  test_policy_loader.py  test_repair_benchmark.py  test_repair_loop.py  test_sams.py  test_schemas.py
tests/integration/: test_live_gemini_patch_generator.py  test_medical_guardrail_demo.py  test_software_repair_demo.py
(+32 files in other folders)
