[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "brahman-os"
version = "0.1.0"
description = "A production-grade neurosymbolic runtime for safe autonomous AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
gemini = [
    "google-genai>=2.0",
]
dev = [
    "mypy>=1.15",
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["docs/raw"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["brahman_os"]
mypy_path = "src"
